--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="F:/CSED21/year2/1st_semester/OOP/assignment3/DBMS/test_supporting_files.jar"/>
+	<classpathentry kind="lib" path="test_supporting_files.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
